# dbt-toolkit

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  techstack.md  techstack.yml
.github/workflows/: release.yaml
dbttoolkit/cli/: main.py
dbttoolkit/core/: config.py  exceptions.py  io.py  sql.py
dbttoolkit/dialect/: bigquery.py
tests/: test_transform.py
tests/data/: complex-sample.sql  sample1.sql
